--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,26 @@
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vue-h5</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but vue-h5 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover">
+  <% if (process.env.NODE_ENV === 'production') { %> <% for(var css of
+  htmlWebpackPlugin.options.cdn.css) { %>
+  <link href="<%=css%>" rel="preload" as="style" />
+  <link rel="stylesheet" href="<%=css%>" as="style" />
+  <% } %> <% for(var js of htmlWebpackPlugin.options.cdn.js) { %>
+  <link href="<%=js%>" rel="preload" as="script" />
+  <script src="<%=js%>"></script>
+  <% } %> <% } %>
+  <title><%= htmlWebpackPlugin.options.title %></title>
+</head>
+<body>
+<noscript>
+  <strong>We're sorry but FastH5 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+</noscript>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
